tests/invalid/precedence_encoding_over_tab.nano
..
    tab	value
    control 聙
